# tentacles

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
examples/ames_housing/: pyproject.toml  requirements.txt
examples/ames_housing/src/ames_housing/: __init__.py  constants.py
examples/ames_housing/src/ames_housing/assets/: ames_housing_data.py  ames_housing_features.py  price_prediction_models.py  train_test.py
examples/ames_housing/src/ames_housing/resources/: csv_data_set_loader.py
src/tentacles/io_managers/: fs_io_manager.py  lakefs_io_manager.py
src/tentacles/io_managers/serializers/: csv_serializer.py  pickle_serializer.py  serializer.py
src/tentacles/resources/: mlflow_session.py
src/tentacles/utils/: dagster.py
