[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tentacles"
description = ""
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "dagster>=1.7.4",
  "mlflow>=2.12.1",
  "joblib>=1.4.2",
  "lakefs-spec>=0.9.0",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F841"]
