[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ames-housing"
description = ""
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "dagster==1.7.4",
  "dagster-webserver==1.7.4",
  "pandas==2.2.2",
  "case-converter==1.1.0",
  "scikit-learn==1.4.2",
  "tentacles @ git+https://github.com/janwillemkl/tentacles@cb1f80011e5a3d47aa7d95c2061ead06038fc6a2"
]

[project.optional-dependencies]
dev = ["black", "ruff", "ruff-lsp"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F841"]
